<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/senior_bg"
    android:padding="@dimen/spacing_l">

    <TextView
        android:id="@+id/dev_hub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dev_hub_title"
        android:textAppearance="@style/TextAppearance.Senior.TitleLarge"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/dev_hub_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_s"
        android:text="@string/dev_hub_note"
        android:textAppearance="@style/TextAppearance.Senior.BodyMedium"
        app:layout_constraintTop_toBottomOf="@id/dev_hub_title"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dev_hub_role_select"
        style="@style/Widget.Senior.Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_l"
        android:text="@string/dev_hub_role_select"
        app:layout_constraintTop_toBottomOf="@id/dev_hub_note"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dev_hub_patient_login"
        style="@style/Widget.Senior.Button.Secondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_s"
        android:text="@string/dev_hub_patient_login"
        app:layout_constraintTop_toBottomOf="@id/dev_hub_role_select"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dev_hub_caregiver_login"
        style="@style/Widget.Senior.Button.Secondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_s"
        android:text="@string/dev_hub_caregiver_login"
        app:layout_constraintTop_toBottomOf="@id/dev_hub_patient_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dev_hub_patient_sms"
        style="@style/Widget.Senior.Button.Secondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_s"
        android:text="@string/dev_hub_patient_sms"
        app:layout_constraintTop_toBottomOf="@id/dev_hub_caregiver_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dev_hub_patient_home"
        style="@style/Widget.Senior.Button.Secondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_s"
        android:text="@string/dev_hub_patient_home"
        app:layout_constraintTop_toBottomOf="@id/dev_hub_patient_sms"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dev_hub_caregiver_sms"
        style="@style/Widget.Senior.Button.Secondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_s"
        android:text="@string/dev_hub_caregiver_sms"
        app:layout_constraintTop_toBottomOf="@id/dev_hub_patient_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
